BugFix related to MKL PARDISO solver implementation for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ option (USE_OPENMP "Compile with OpenMP support (for parallel assembly)" OFF)
 option (USE_DSS "Enable DSS module" OFF) # No reason to use this
 option (USE_IML "Enable iml++ solvers" OFF) # or this
 option (USE_SPOOLES "Enable SPOOLES-solver" OFF) # or this
-option (USE_INTEL_MKLPARDISO "Enable MKLPARDISO solver support" OFF)
+option (USE_INTEL_MKLPARDISO "Enable MKLPARDISO solver support" ON)
 option (USE_PARDISO_ORG "Enable PARDISO-project.org solver support" OFF)
 option (USE_PETSC "Enable PETSc support (specify PETSC_DIR and/or PETSC_ARCH if needed)" OFF)
 option (USE_SLEPC "Enable SLEPc support" OFF)
@@ -326,14 +326,17 @@ if (USE_PARDISO_ORG)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp" ) 
     list (APPEND MODULE_LIST "pardiso-project.org")
 endif ()
-
-if (USE_INTEL_MKL_PARDISO)
+if (USE_INTEL_MKLPARDISO)
+    message (STATUS "USED MKL_PARDISO!")
     # Find the actual libraries:
-    list(APPEND MKL_LIBS "mkl_core" "mkl_gf_lp64" "mkl_gnu_thread" "pthread")
+    #list(APPEND MKL_LIBS "mkl_core" "mkl_gf_lp64" "mkl_gnu_thread" "pthread")
+    list(APPEND MKL_LIBS "mkl_core" "mkl_intel_lp64" "mkl_intel_thread")
     foreach (f ${MKL_LIBS})
         if (INTEL_MKL_PARDISO_DIR)
-            find_library (${f}_LIB ${f} PATH "${INTEL_MKL_PARDISO_DIR}/mkl/lib/intel64/" DOC "MKLPARDISO (library)")
-            include_directories ("${INTEL_MKL_PARDISO_DIR}/mkl/include")
+            #find_library (${f}_LIB ${f} PATH "${INTEL_MKL_PARDISO_DIR}/mkl/lib/intel64/" DOC "MKLPARDISO (library)")
+            #include_directories ("${INTEL_MKL_PARDISO_DIR}/mkl/include")
+            find_library (${f}_LIB ${f} PATH "${INTEL_MKL_PARDISO_DIR}/lib/intel64/" DOC "MKLPARDISO (library)")
+            include_directories ("${INTEL_MKL_PARDISO_DIR}/include")
         else ()
             find_library (${f}_LIB ${f} HINTS "/opt/intel/composerxe/mkl/lib/intel64/" DOC "MKLPARDISO (library)")
             include_directories ("/opt/intel/composerxe/mkl/include")
